# addressesfrpy

./: .pre-commit-config.yaml  README.md  example.py  pyproject.toml
.github/workflows/: python-lint.yml  python-publish.yml  release.yml
addressesfrpy/: __init__.py  api.py  auth.py  consts.py  exceptions.py
