[build-system]
requires = ["setuptools","setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "addressesfrpy"
dynamic     = ["version"]
license     = "GPL-3.0-or-later"
description = "Fetch data from geoservices.ign.fr"
readme      = "README.md"
authors     = [
    {name = "Cyr-ius", email = "cyr-ius@ipocus.net"}
]
keywords    = ["address", "addresses", "fr", "ign", "geoservices", "async"]
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
]
requires-python = ">=3.10.0"
dependencies    = [
    "aiohttp>=3.8.1",
]

[project.optional-dependencies]
dev = [
    "prek",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/cyr-ius/addressesfrpy"

[tool.setuptools_scm]

[tool.setuptools]
platforms = ["any"]

[tool.setuptools.packages.find]
exclude = ["node_modules*"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
combine-as-imports = true
split-on-trailing-comma = false
